<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">

  <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" >
	
  		<!--  Header  Starts-->
  		<LinearLayout android:id="@+id/header"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content"
  				android:paddingTop="5dip"
  				android:paddingBottom="5dip">
  				<!-- Logo Start-->
  				<ImageView android:src="@drawable/doctorb"
  				    		android:contentDescription="@string/imgLogoDesc"
  							android:layout_width="wrap_content"
  							android:layout_height="wrap_content"/>
  				<!-- Logo Ends -->
  		</LinearLayout>
  		<!--  Header Ends -->  

  		
  		<!-- Place to dump output -->
		<LinearLayout
		  android:orientation="vertical"
		  android:layout_width="match_parent"
		  android:layout_height="wrap_content"
		  android:paddingRight="40dip"
		  android:paddingLeft="40dip"
		  android:paddingTop="20dip"
		  android:paddingBottom="20dip"
		  android:layout_below="@id/header" >
   			  <TextView  
			        android:layout_width="fill_parent"
			  		android:layout_height="wrap_content"
			  		android:textColor="#555555"
			  		android:textSize="16sp"
			  		android:padding="20dip"
			  		android:text="@string/about_text"/>
 			  <TextView  
			        android:layout_width="fill_parent"
			  		android:layout_height="wrap_content"
			  		android:textColor="#555555"
			  		android:textSize="16sp"
			  		android:padding="20dip"
			  		android:text="@string/copy_text"/>		  		  
			  <!-- button -->	

			  <Button
			      android:id="@+id/btnOk"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:layout_marginTop="10dip"
			      android:text="@string/label_ok"
			      android:textSize="14sp" />
		    
		</LinearLayout>
  		
  </RelativeLayout>
</ScrollView>